added another input box that multiplies the height and width

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
 <body>
     <div>
         <form id="generate">
-            <label for="numberOf">How many squares?</label>
-            <input type="text" id="numberOf" name="numberOf" value="">
-            <input type="button" value="Generate" id="button">
+          How many squares width?
+            <input id="numberWidth" type="text" name="numberWidth">
+            <br>
+           How many squares height?
+            <input id="numberLength" type="text" name="numberLength">
+            <br>
+            <input type="button" value="Generate" id="myButton">
         </form>
     </div>
     <p id="demo"></p>
     <div>
         <div class="grid"></div>
     </div>
+
     <script src="index.js"></script>
 </body>
 
