tested css drawing to make block shapes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div>
         <form id="generate">
           How many squares width?
-            <input id="numberWidth" type="text" name="numberWidth">
+            <input id="numberWidth" value="8" type="text" name="numberWidth">
             <br>
            How many squares height?
-            <input id="numberLength" type="text" name="numberLength">
+            <input id="numberLength" value="8" type="text" name="numberLength">
             <br>
             <input type="button" value="Generate" id="myButton">
         </form>
